added db functions, added controller functions

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_HOST="database-1/cwu5nsjigudm.ca-central-1.rds.amazonaws.com"
+DB_HOST="database-1.cwu5nsjigudm.ca-central-1.rds.amazonaws.com"
 DB_USER="admin"
 DB_PASS = "mypassword"
 DB_PORT = 3306
